ogo/static/css/ogo.less
@import "../bootstrap/less/variables.less";

// Set variables here:
@ogo-red: #ba272e;
@brand-primary: @ogo-red;


@import "../bootstrap/less/bootstrap.less";

// Overrides and styles here:

.navbar {
	.navbar-brand {
		color: black;
		font-size: 22px;
		padding-top: 7px;
		padding-bottom: 7px;
		&:hover { color: black; }
		img { margin-right: 15px; }
	}
	.btn.navbar-right { margin-bottom: 8px; }
	.navbar-nav { clear: left; } // links are always on a second row.
	.navbar-nav>li>a { padding-top: 10px; padding-bottom: 10px; &:active { outline-style: none; } }
	.navbar-nav>.active>a {
		border-radius: 5px 5px 0 0;
	}
	// Change the header configuration on phones:
	@media (max-width: @screen-xs-max) {
		.navbar-brand {
			float: none;
			display: block;
			img {
				display: block;
				margin: 0 auto;
			}
			font-size: 0;
			text-indent: -9999px;
			line-height: 0;
		}
		.btn.navbar-right {
			width: 50%;
			float: right;
		}
	}
}

// Set the padding required for a fixed nav:
body { padding-top: 110px; }

// Don't interfere with django toolbar:
html.cms_toolbar-toolbar .navbar { top: 42px; }

// For images using the CMS image plugin:

.cms-img {
	margin-bottom: 10px;
	img { width: 100%; border: 0 none; }
	.cms-img-caption {
		font-size: 12px;
		margin-top: 5px;
	}
	&.cms-img-float-right {
		width: 30%;
		float: right;
		clear: right;
		margin-left: 10px;
	}
	&.cms-img-float-left {
		width: 30%;
		float: left;
		clear: left;
		margin-right: 10px;
	}
	&.cms-img-frame { .img-thumbnail }
}

// For partner logos

.partner-logo {
	width: 29.3%;
	margin: 2%;
	border-right: 1px solid white;
	float: left;
	a {
		display: block;
		position: relative;
		height: 0;
		padding-bottom: 50.00%; // relative to width of parent element
		img {
			display: block;
			max-width: 100%;
			max-height: 100%;
			margin: 0 auto;
		}
	}
	@media (max-width: @screen-xs-max) { width: 46%; }
	@media (min-width: @screen-lg) { width: 21%; }
}
.partner-logo + *:not(.partner-logo) {
	clear: left;
}

